feat: bo sung bai hoc moi va fix loi tinh tien do khoa hoc
